--- a/app/src/main/res/layout/activity_cerveza1.xml
+++ b/app/src/main/res/layout/activity_cerveza1.xml
@@ -5,12 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgapps"
-    tools:context=".MenuC">
+    tools:context=".Cervezas.Cerveza1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/boton_redondo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="atras"
+            android:text="Atras" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,7 +32,7 @@
                 android:id="@+id/textC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WaiterApp"
+                android:text="Cervezas"
                 android:textColor="#ffffff"
                 android:textSize="24sp"></TextView>
 
@@ -46,43 +55,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alignmentMode="alignMargins"
-            android:columnCount="2"
+            android:columnCount="1"
             android:columnOrderPreserved="false"
-            android:rowCount="3">
-
-            <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            app:cardElevation="6dp"
-            app:cardCornerRadius="12dp"
-            android:layout_margin="12dp">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:onClick="postre"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/postre"/>
-                <TextView
-                    android:layout_marginTop="12dp"
-                    android:textColor="#6f6f6f"
-                    android:text="Postres"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+            android:rowCount="6">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -101,14 +76,13 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:onClick="sopas"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/sopas"/>
+                        android:src="@drawable/cerveza1"/>
                     <TextView
                         android:layout_marginTop="12dp"
                         android:textColor="#6f6f6f"
-                        android:text="Sopas"
+                        android:text="Cerveza Corona"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -135,14 +109,13 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:onClick="princial"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/principal"/>
+                        android:src="@drawable/cerveza2"/>
                     <TextView
                         android:layout_marginTop="12dp"
                         android:textColor="#6f6f6f"
-                        android:text="P. Principal"
+                        android:text="Cerveza Indio"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -169,14 +142,13 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:onClick="entrante"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/entrantes"/>
+                        android:src="@drawable/cerveza3"/>
                     <TextView
                         android:layout_marginTop="12dp"
                         android:textColor="#6f6f6f"
-                        android:text="Entrantes"
+                        android:text="Cerveza Sol"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -203,14 +175,46 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:onClick="Bebidas"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/refreszos"/>
+                        android:src="@drawable/cerveza4"/>
                     <TextView
                         android:layout_marginTop="12dp"
                         android:textColor="#6f6f6f"
-                        android:text="Refrescos"
+                        android:text="Cerveza Heineken"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/cerveza5"/>
+                    <TextView
+                        android:layout_marginTop="12dp"
+                        android:textColor="#6f6f6f"
+                        android:text="Cerveza Tecate"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -238,14 +242,13 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:onClick="Cervezas"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/cerveza"/>
+                        android:src="@drawable/cerveza6"/>
                     <TextView
                         android:layout_marginTop="12dp"
                         android:textColor="#6f6f6f"
-                        android:text="Cervezas"
+                        android:text="Cerveza Modelo"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -255,7 +258,6 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
 
         </GridLayout>
 
