--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,8 @@
 
     <item
         android:id="@+id/item1"
-        android:title="Historial de pedidos"/>
+        android:title="Historial de pedidos"
+        android:onClick="Hpedidos"/>
 
     <item
         android:id="@+id/item2"
