--- a/app/src/main/res/layout/activity_h_pedidos.xml
+++ b/app/src/main/res/layout/activity_h_pedidos.xml
@@ -8,5 +8,28 @@
     tools:context=".Menu.HPedidos">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="M4:         Historial de pedidos"
+                android:textSize="25sp"
+                android:textColor="@color/negro"
+                android:textAlignment="center"/>
+        </LinearLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hola"
+            android:textSize="50sp"
+            android:layout_marginTop="20dp"/>
+    </LinearLayout>
 </ScrollView>
