--- a/app/src/main/res/layout/activity_h_pedidos.xml
+++ b/app/src/main/res/layout/activity_h_pedidos.xml
@@ -24,12 +24,23 @@
                 android:textColor="@color/negro"
                 android:textAlignment="center"/>
         </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hola"
-            android:textSize="50sp"
-            android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TEMPLO DE ALIMENTOS:                               3"
+                    android:textSize="20sp"
+                    android:layout_marginTop="20dp"/>
+        </LinearLayout>
     </LinearLayout>
+
+    <GridLayout
+        android:id="@+id/grid_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numColumns="2"/>
 </ScrollView>
