--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/item1"
         android:title="Historial de pedidos"
-        android:onClick="Hpedidos"/>
+        android:onClick="hpedido"/>
 
     <item
         android:id="@+id/item2"
