--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="negro">#000000</color>
     <color name="blanco">#ffffff</color>
+    <color name="rojo">#FB3636</color>
+    <color name="verde">#36FB57</color>
+
 </resources>
