--- a/app/src/main/res/layout/activity_hpedidos.xml
+++ b/app/src/main/res/layout/activity_hpedidos.xml
@@ -17,8 +17,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="M06:     Hostorial de pedidos"
+            android:text="M06:     Historial de pedidos"
             android:textAlignment="center"
+            android:textColor="#ffffff"
             android:layout_marginTop="5sp"
             android:layout_marginLeft="50dp"
             android:textSize="25sp"></TextView>
@@ -184,6 +185,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/verde"
+        android:onClick="pagar"
         android:background="@drawable/boton_redondo"
         android:text="Pagar orden"></Button>
         <Button
