--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,11 +9,13 @@
 
     <item
         android:id="@+id/item2"
-        android:title="Comentarios" />
+        android:title="Comentarios"
+        android:onClick="comentario"/>
 
     <item
         android:id="@+id/item3"
-        android:title="Como funciona" />
+        android:title="Como funciona"
+        android:onClick="funciona"/>
 
     <item
         android:id="@+id/item4"
