--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="blanco">#ffffff</color>
     <color name="rojo">#FB3636</color>
     <color name="verde">#36FB57</color>
+    <color name="gris">#BDBDBD</color>
+    <color name="gris2">#939393</color>
 
 </resources>
