--- a/app/src/main/res/layout/activity_entrantes1.xml
+++ b/app/src/main/res/layout/activity_entrantes1.xml
@@ -48,6 +48,7 @@
             <ImageView
                 android:layout_width="62dp"
                 android:layout_height="62dp"
+                android:background="@mipmap/logo"
                 android:layout_alignParentRight="true"></ImageView>
         </RelativeLayout>
 
