--- a/app/src/main/res/layout/activity_hpedidos.xml
+++ b/app/src/main/res/layout/activity_hpedidos.xml
@@ -13,16 +13,27 @@
         android:textAlignment="center"
         android:background="@color/colorPrimaryDark"
         android:orientation="horizontal">
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="atras"
+            android:hint="Atras"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/boton_redondo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="M06:     Historial de pedidos"
+            android:text="M06: Historial de pedidos"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:layout_marginTop="5sp"
             android:layout_marginLeft="50dp"
-            android:textSize="25sp"></TextView>
+            android:textSize="20sp"></TextView>
     </LinearLayout>
 
     <RelativeLayout
@@ -192,6 +203,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/rojo"
+            android:onClick="cancelar"
             android:text="Cancelar orden"
             android:background="@drawable/boton_redondo"
             android:layout_alignParentRight="true"></Button>
