--- a/app/src/main/res/layout/activity_pagar.xml
+++ b/app/src/main/res/layout/activity_pagar.xml
@@ -13,6 +13,18 @@
         android:textAlignment="center"
         android:background="@color/colorPrimaryDark"
         android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="atras"
+            android:hint="Atras"
+            android:layout_marginTop="5sp"
+            android:background="@drawable/boton_redondo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,15 +106,27 @@
         android:layout_height="wrap_content"
         android:text="Efectivo"
         />
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginLeft="100dp">
     <Button
         android:id="@+id/button_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enviar"
+        android:text="Pagar"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"/>
-
+    <Button
+        android:id="@+id/button_submit1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancelar"
+        android:onClick="cancelar"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+</LinearLayout>
 </LinearLayout>
 
 
