--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2B3B96</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#146EAA</color>
     <color name="negro">#000000</color>
     <color name="blanco">#ffffff</color>
     <color name="rojo">#FB3636</color>
