--- a/app/src/main/res/layout/activity_menu_c.xml
+++ b/app/src/main/res/layout/activity_menu_c.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgapps"
+    android:background="@drawable/fondo"
     tools:context=".MenuC">
 
     <LinearLayout
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="WaiterApp"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="24sp"></TextView>
 
             <TextView
@@ -33,7 +33,7 @@
                 android:layout_below="@+id/textC"
                 android:layout_marginTop="6dp"
                 android:text="Bienvenido"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="12sp"></TextView>
 
             <ImageView
