--- a/app/src/main/res/layout/activity_contactanos.xml
+++ b/app/src/main/res/layout/activity_contactanos.xml
@@ -10,15 +10,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:textAlignment="center"
         android:background="@color/gris"
         android:orientation="horizontal">
         <Button
-            android:layout_width="70sp"
-            android:layout_marginTop="2sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3sp"
             android:background="@drawable/boton_redondo"
-            android:layout_height="40dp"
             android:textColor="#ffffff"
             android:onClick="atras"
             android:text="Atras">
