--- a/app/src/main/res/layout/activity_restaurantes.xml
+++ b/app/src/main/res/layout/activity_restaurantes.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:onClick="atras"
         android:hint="Atras"
+        android:textColor="@color/negro"
         android:layout_marginTop="5sp"
         android:background="@drawable/boton_redondo"
         app:layout_constraintEnd_toEndOf="parent"
